@@ -4,19 +4,6 @@
 (fn tre-ancestor-or-self-if (node pred)
   (ancestor-or-self-if node pred))
 
-(defvar *attribute-xlat* (new "class" "className"))
-(defvar *attribute-xlat-rev* (make-hash-table))
-
-(fn make-attribute-xlat ()
-  (maphash #'((k v)
-                (= (aref *attribute-xlat-rev* v) k)
-                (= (aref *attribute-xlat-rev* (downcase v)) k))
-           *attribute-xlat*))
-(make-attribute-xlat)
-
-(fn xlat-attribute (x)
-  (aref *attribute-xlat* x))
-
 (fn make-native-element (name doc ns)
   (? (& ns (defined? doc.create-element-n-s))
      (doc.create-element-n-s ns name)
@@ -80,60 +67,25 @@
         (append-child child)))
   this)
 
-(defmethod tre-element read-attribute (name)
-  (| (!? (xlat-attribute name)
-         (get-attribute !))
-     (get-attribute name)))
-
-(defmethod tre-element read-attributes ()
-  (let attrs (make-hash-table)
-    (doarray (a attributes attrs)
-      (= (href attrs (| (aref *attribute-xlat-rev* a.node-name)
-                        a.node-name))
-         a.node-value))))
-
-(defmethod tre-element attribute-names ()
-  (let attrs (make-queue)
-    (doarray (a attributes (queue-list attrs))
-      (enqueue attrs (| (aref *attribute-xlat-rev* a.node-name)
-                        a.node-name)))))
-
-(defmethod tre-element attributes-alist ()
-  (let attrs (make-queue)
-    (doarray (a attributes (queue-list attrs))
-      (enqueue attrs (. (| (aref *attribute-xlat-rev* a.node-name)
-                           a.node-name)
-                        a.node-value)))))
+(defmethod tre-element attr (name, value)
+  (? (not value)
+     (get-attribute name)
+     (write-attribute name value)))
 
 (defmethod tre-element attr? (name)
-  (doarray (a attributes)
-    (& (string== a.node-name name)
-       (return t))))
+  (has-attribute name))
 
-(defmethod tre-element attribute-value? (name val)
-  (& (attr? name)
-     (string== (downcase (read-attribute name))
-               (downcase val))))
-
-(defmethod tre-element write-attribute (name value)
-  (set-attribute name value)
-  (!? (xlat-attribute name)
-      (set-attribute ! value))
-  value)
-
-(defmethod tre-element write-attributes (attrs)
-  (? (hash-table? attrs)
-     (maphash #'((k v)
-                  (write-attribute k v))
-              attrs)
-     (@ (i attrs)
-       (write-attribute i. .i)))
-  attrs)
-
-(defmethod tre-element attr (name value)
-  (? (defined? value)
-     (write-attribute name value)
-     (read-attribute name)))
+(defmethod tre-element attrs (new-attrs)
+  (? new-attrs
+     (? (hash-table? attrs)
+        (maphash #'((k v)
+                     (write-attribute k v))
+                 attrs)
+        (@ (i attrs)
+          (write-attribute i. .i)))
+     (let attrs (make-hash-table)
+       (doarray (a attributes attrs)
+         (= (href attrs a.node-name) a.node-value)))))
 
 (defmethod tre-element set-styles (styles)
   (maphash #'((k v)
